--- a/frontend/src/global_styles/buttons.scss
+++ b/frontend/src/global_styles/buttons.scss
@@ -1,7 +1,7 @@
 @import "functions.scss";
 @import "mixins.scss";
+@import "default_variables.scss";
 
-$bright-blue: #1da1f2;
 $btn-sizes: (
   "s": 0.5rem 2rem,
   "m": 0.7rem 4rem,
