--- a/frontend/src/global_styles/styles.scss
+++ b/frontend/src/global_styles/styles.scss
@@ -2,6 +2,7 @@
 @import "functions.scss";
 @import "buttons.scss";
 @import "inputs.scss";
+@import "loaders.scss";
 
 body {
   color: $text-color;
