--- a/frontend/src/global_styles/default_variables.scss
+++ b/frontend/src/global_styles/default_variables.scss
@@ -1,6 +1,7 @@
 $text-color: white;
 $primary-color: #15202b;
 $second-color: #111922;
+$bright-blue: #1da1f2;
 
 $primary-fonts: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
 
